# cmake-project-template

./: CMakeLists.txt  README.md
build-android/: README.md
src/ExampleTemplateLib/: CMakeLists.txt
src/ExampleTemplateQtApp/: CMakeLists.txt
src/ExampleTemplateQtApp/src/: main.cpp
src/ExampleTemplateQtApp/src/res/: main.qml
